--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -18,6 +18,18 @@ jobs:
       uses: actions/steup-python@v5
       with:
         python-version: '3.10'
-
+        
+    - name: Testando variáveis secretas
+      run: |
+        echo "usuario: $DB_USER"
+        echo "token: $TOKEN"
+        echo "Password: $DB_PASSWORD"
+      env:
+        DB_USER: ${{secrets.DB_USER}}
+        TOKEN: ${{secrets.TOKEn}}
+        DB_PASSWORD: ${{secrets.DB_PASSWORD}}
+    
     - name: Executar app.py
       run: python app.py
+      env:
+        APY_KEY: ${{ secrets.APY_KEY }}
