feature changed to hotfix

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -2,7 +2,7 @@ name: CI - Python app Yaman
 
 on:
   push:
-    branches: [develop, feature/*]
+    branches: [develop, hotfix/*]
   pull_request:
     branches: [main]
 
