--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -2,20 +2,20 @@ name: CI - Python app Yaman
 
 on:
   push:
-    branches: [develop, hotfix/*]
+    branches: ["develop", "hotfix/*"]
   pull_request:
-    branches: [main]
+    branches: ["main"]
 
 jobs:
   build-and-run:
-    runs-on: ubuntu-latest # hosted-runner
+    runs-on: ubuntu-latest # hosted-runner , estava lasted
 
     steps:
     - name: Checkout do Código
       uses: actions/checkout@v4
 
     - name: Confdigurar python
-      uses: actions/steup-python@v5
+      uses: actions/setup-python@v5 # estava steup
       with:
         python-version: '3.10'
         
@@ -25,9 +25,9 @@ jobs:
         echo "token: $TOKEN"
         echo "Password: $DB_PASSWORD"
       env:
-        DB_USER: ${{secrets.DB_USER}}
-        TOKEN: ${{secrets.TOKEn}}
-        DB_PASSWORD: ${{secrets.DB_PASSWORD}}
+        DB_USER: ${{ secrets.DB_USER }}
+        TOKEN: ${{ secrets.TOKEN }} # espacamento e n minusculo
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     
     - name: Executar app.py
       run: python app.py
