--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -74,3 +74,28 @@ jobs: #add condicional
           path: |
             performance/results/site_yaman_results.jtl
             performance/artifacts/site_yaman_report.zip
+          # período de retenção do artifact em dias 
+          retention-days: 7
+  # ==========================================
+  # Lint / checagem simples em paralelo
+  #    - Demonstra paralelismo de jobs
+  # ==========================================
+  lint:
+    needs: build-and-run # depende do build, mas roda em paralelo com o performance-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout do codigo em LINT
+        uses: actions/checkout@v4
+      
+      - name: Configurar python novamente
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      
+      - name: Instalar Flake8 (lint python)
+        run: pip install flake8
+
+      - name: rodar Flake8 no app.py
+        run: flake8 app.py || true
+        
